# relic

./: ROADMAP.md  pyproject.toml
examples/: attention_figure1.relic  encoder_decoder.relic  encoder_stack.relic  minimal.relic  multi_panel.relic  multihead_attention.relic  transformer_figure1.relic  transformer_full.relic  two_boxes.relic  v0.2_features.relic
examples/ideal/: multihead_attention_ideal.tex
src/relic/: __init__.py  ast_nodes.py  cli.py  constraints.py  dag.py  errors.py  ir.py  lexer.py  objects.py  parser.py  rank_resolver.py  resolver.py  router.py  themes.py
src/relic/backends/: __init__.py  tikz.py
tests/: test_dag.py  test_integration.py  test_lexer.py  test_new_features.py  test_parser.py  test_resolver.py  test_router.py  test_tikz_backend.py  test_tikz_features.py  test_v0_2_features.py  test_v0_4_features.py
